# from-pain-to-beauty

./: .flake8  .gitattributes  .gitignore  README.md  ShopScan.py  __init__.py  call_main.py  client.py  constants.py  create_terminate_txt.bat  denied_slots_db_handler.py  game_start_watcher.py  json_test.txt  launcher.py  loc_test.py  loop_breaker.py  main.py  mains.py  move_cmd.bat  move_cmd_window.bat  my_classes.py  my_scene_switch.py  my_utils.py  old_pregame_phase_detector.py  old_pregame_phase_detector_2.py  pregame_phase_detector.py  pyproject.toml  requirements.in  requirements.txt  run_script_and_delete_terminate_txt.bat  run_server.bat  run_test2.bat  sceneswitch.py  server.py  shop_scan.py  shop_scan_bat.bat  shop_scan_with_client.py  shop_scanner.py  shop_watcher.py  single_instance.py  (+18 more)
AI/: model.py  wav_augmentation.py  wav_lenght_normalizer.py
AI/Robeau/: model.py
ai_voice_recon (Dev paused)/i_think_were_gonna_win/: live_detection.py  my_first_model.pth  my_model.py
batch_files/: run_loc_test.bat  start_main.py.bat  start_server.py.bat  stop_main.py.bat  terminal_manager2_test.bat
cmd_windows_info/: locations.csv
config/: .pylintrc  README.md  mypy.ini
data/: .gitignore
data/streamerbot_watched_folder/: time_with_shop_open.txt
data/streamerbot_ws_requests/: pregame_scene_change_dslr_move_for_hero_pick.json
old_config_files/: .flake8  .pylintrc
old_files/: OLD_main.py  old_pregame_phase_detector.py
old_scripts/: OLD_client.py  OLD_main.py  OLD_shop_watcher_old2.py  OLD_terminal_window_manager_v3.py  client_old.py  main.py  old_pregame_phase_detector.py  old_pregame_phase_detector_2.py  shop_watcher_old.py  shop_watcher_old2.py
src/: __init__.py
src/ai/: __init__.py  google_stt.py  neo4jdb.py  robeau.py
src/apps/: __init__.py  pregame_phase_detector.py  shop_watcher.py
src/config/: __init__.py  settings.py  setup.py
src/conn/: socks.py  websocket.py
src/connection/: __init__.py  socket_server.py  socks.py  websocket.py  websocket_client.py
src/connections/: __init__.py  sock.py  socket.py  websocket.py
src/core/: .gitignore  __init__.py  classes.py  constants.py  server.py  setup.py  slots_db_handler.py  terminal_window_manager_v4.py  terminal_window_slots.db  utils.py
src/robeau/: __init__.py  audio_mappings.json  google_stt.py  graph_logic_network.py  robeau.py  (+2 more)
streamerbot_watched/: time_with_shop_open.txt
streamerbot_ws_requests/: dslr_hide.json  dslr_move_for_hero_pick.json  get_actions.json  get_actions.py  hide_dslr.json  read_time.json  show_dslr.json  switch_to_game_start_scene.json
temp/: terminate.txt  terminate_scan.txt  test.txt
terminal_loc/: locations.csv
test_files/: loc_test.py  test1.py  test_dict.json  windows_lots.json
test_folder/: start_server2.bat
test_scripts/: test2.py
tools/: Neo4j_macros.ahk  Neo4j_macros.ahk.bak  README.md
watched_folder_shop_shown/: renamed.txt
ws_requests/: shop_hidden.json  shop_shown.json  toggle_DSLR.json
(+166 files in other folders)
